--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
             .background-text {
                 font-size: 2em; /* 작은 화면에서는 배경 글씨 크기를 줄임 */
             }
+            .top-left-text {
+                font-size: 10px;
+            }
         }
     </style>
 </head>
