--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico"/> 
     <title>커스텀 매치 전적검색</title>
+    <meta name="apple-mobile-web-app-title" content="멀티 트래커" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#9DA38F" />
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500&display=swap" rel="stylesheet">
     <style>
@@ -38,8 +41,8 @@
             box-sizing: border-box;
             display: flex;
             flex-direction: column;
-            box-shadow: 0 6px 6px rgba(0, 0, 0, 0.09), 
-                        0 3px 2px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 4px 4px rgba(0, 0, 0, 0.09), 
+                        0 3px 1px rgba(0, 0, 0, 0.1);
             z-index: 1;
         }
         textarea {
@@ -127,7 +130,7 @@
         <div class="divider"></div>
         <button onclick="submitText()">검색</button>
     </div>
-    <div class="top-left-text">Copyright 2024. 1ettuce</div>
+    <div class="top-left-text">Copyright 2024. 1ettuce.</div>
     <div class="bottom-middle-text">
         <a href="https://r6s-custom-match.notion.site/R6S-0377f8ae7ca94aa6baee51bc551e2e0f" target="_blank" class="link">도움말</a> | 
         <a href="https://www.google.com" target="_blank" class="link">버그 제보</a>
