index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
     <div class="top-left-text">Copyright 2024. 1ettuce.</div>
     <div class="bottom-middle-text">
-        <a href="https://r6s-custom-match.notion.site/R6S-0377f8ae7ca94aa6baee51bc551e2e0f" target="_blank" class="link">도움말</a> | 
+        <a href="https://www.naver.com" target="_blank" class="link">도움말</a> | 
         <a href="https://www.google.com" target="_blank" class="link">버그 제보</a>
 </div>
 
